# tools

./: pom.xml
AssembleDjvu/: .gitignore  AssembleDjvu.sln
AssembleDjvu/AssembleDjvu/: App.xaml  App.xaml.cpp  App.xaml.h  AssembleDjvu.vcxproj  AssembleDjvu.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  app.manifest  packages.config  pch.h
AssembleDjvu/djvulibre/: README.md
AssembleDjvuCpp/: CMakeLists.txt  main.cpp
AssembleDjvuCpp/libdjvu/: Arrays.cpp  Arrays.h  BSByteStream.cpp  BSByteStream.h  BSEncodeByteStream.cpp  ByteStream.cpp  ByteStream.h  CMakeLists.txt  DataPool.cpp  DataPool.h  DjVmDir.cpp  DjVmDir.h  DjVmDir0.cpp  DjVmDir0.h  DjVmDoc.cpp  DjVmDoc.h  DjVmNav.cpp  DjVmNav.h  DjVuAnno.cpp  DjVuAnno.h  DjVuDocEditor.cpp  DjVuDocEditor.h  DjVuDocument.cpp  DjVuDocument.h  DjVuDumpHelper.cpp  DjVuDumpHelper.h  DjVuErrorList.cpp  DjVuErrorList.h  DjVuFile.cpp  DjVuFile.h  DjVuFileCache.cpp  DjVuFileCache.h  DjVuGlobal.cpp  DjVuGlobal.h  DjVuGlobalMemory.cpp  DjVuImage.cpp  DjVuImage.h  DjVuInfo.cpp  DjVuInfo.h  DjVuMessage.cpp  (+69 more)
assemble-djvu/: pom.xml
assemble-djvu/src/main/java/by/aveleshko/tools/djvu/: DjvuAssembler.java
recognize-ru/: pom.xml
recognize-ru/src/main/java/by/aveleshko/tools/recog/: RecogException.java  RecogResponse.java  Recognizer.java
recognize-ru/src/main/resources/: logback.xml
